--- a/estilos.scss
+++ b/estilos.scss
@@ -9,29 +9,23 @@ body {
     flex-direction: column;
 
     #contenido {
-        max-width: 460px;
-        padding: 20px;
+        max-width: 860px;
         text-align: center;
 
         section {
             padding-top: 40px;
             padding-bottom: 40px;
+            min-height: 100vh;
         }
 
         .itinerario-item,
         .opcion-item {
-            border: 1px solid #e2e8f0;
             border-radius: 12px;
             padding: 10px;
             margin: 10px 0;
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
         }
 
-        .opcion-item img {
-            width: 80px;
-            height: 80px;
-        }
+
     }
 
 }
@@ -52,7 +46,7 @@ p {
 }
 
 .entrada {
-    background: url(imagenes/fondo1.jpg);
+    background: url(imagenes/fondo.jpg);
     min-height: 600px;
     background-size: cover;
     background-position: center;
@@ -94,7 +88,7 @@ p {
     h1 {
         font-size: 80px;
         margin: 0;
-        color: #5e3b1a;
+        color: #c27347;
         padding: 0;
         line-height: 1;
     }
@@ -102,7 +96,7 @@ p {
     p {
         font-family: "MonteCarlo", cursive;
         font-size: 45px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 0;
 
     }
@@ -125,7 +119,7 @@ p {
     h1 {
         font-size: 80px;
         margin: 0;
-        color: #5e3b1a;
+        color: #c27347;
         padding: 0;
         line-height: 1;
     }
@@ -133,7 +127,7 @@ p {
     p {
         font-family: "MonteCarlo", cursive;
         font-size: 40px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 0;
         font-weight: 600;
         max-width: 280px;
@@ -160,7 +154,7 @@ p {
     h1 {
         font-size: 80px;
         margin: 0;
-        color: #5e3b1a;
+        color: #c27347;
         padding: 0;
         line-height: 1;
     }
@@ -168,7 +162,7 @@ p {
     p {
         font-family: "MonteCarlo", cursive;
         font-size: 40px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 0;
         font-weight: 600;
         max-width: 280px;
@@ -190,7 +184,7 @@ p {
     p {
         font-family: "MonteCarlo", cursive;
         font-size: 28px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 0;
         font-weight: 600;
         max-width: 280px;
@@ -201,7 +195,7 @@ p {
 
     h4 {
         font-size: 40px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 10px 0;
         line-height: 1;
     }
@@ -225,7 +219,7 @@ p {
     p {
         font-family: "MonteCarlo", cursive;
         font-size: 28px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 0;
         font-weight: 600;
         max-width: 280px;
@@ -236,7 +230,7 @@ p {
 
     h3 {
         font-size: 40px;
-        color: #5e3b1a;
+        color: #c27347;
         margin: 10px 0;
         line-height: 1;
     }
@@ -248,10 +242,7 @@ p {
     }
 }
 
-.agradecimiento,
-.evento,
-.itinerario,
-.genero {
+.agradecimiento {
     background: url(imagenes/fondo1.jpg);
     min-height: 600px;
     background-size: cover;
@@ -267,13 +258,204 @@ p {
 
     p {
         font-family: "MonteCarlo", cursive;
-        font-size: 40px;
-        color: #5e3b1a;
+        font-size: 28px;
+        color: #c27347;
         margin: 0;
         font-weight: 600;
         max-width: 280px;
         margin: auto;
         line-height: 1.1;
 
+    }
+}
+
+.evento {
+    background: url(imagenes/fondo1.jpg);
+    min-height: 600px;
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    place-content: center;
+    padding: 15px;
+    gap: 10px;
+
+    h2 {
+        font-size: 40px;
+        margin: 0;
+        color: #c27347;
+        padding: 0;
+        line-height: 1;
+    }
+
+    .fecha {
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        align-items: center;
+        gap: 20px;
+
+
+
+        .item {
+            padding: 10px;
+            border-top: 5px solid #c27347;
+            border-bottom: 5px solid #c27347;
+            font-size: 28px;
+            font-family: "MonteCarlo", cursive;
+            font-weight: bold;
+            line-height: 1;
+
+        }
+
+        .dia {
+            font-size: 80px;
+            font-family: "MonteCarlo", cursive;
+            font-weight: bold;
+            margin: 0;
+        }
+    }
+
+    .relog {
+        margin: auto;
+        width: 50px;
+    }
+
+    p {
+        font-size: 15px;
+        color: #c27347;
+        margin: 0;
+        font-weight: 600;
+        max-width: 280px;
+        margin: auto;
+        line-height: 1.1;
+        font-family: "Delius", cursive;
+        margin-bottom: 10px;
+
+
+    }
+
+    a {
+        text-decoration: none;
+        color: #c27347;
+        font-weight: bold;
+        border-bottom: #5a361c 2px solid;
+    }
+}
+
+.itinerario {
+    background: url(imagenes/fondo1.jpg);
+    min-height: 600px;
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    place-content: center;
+    padding: 15px;
+}
+
+.genero {
+    background: url(imagenes/fondo1.jpg);
+    min-height: 600px;
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    place-content: center;
+    padding: 15px;
+
+
+    .ositos {
+        width: 200px;
+    }
+
+    .nino {
+        width: 100%;
+    }
+}
+
+.nin {
+    background: url(imagenes/fondo1.jpg);
+    min-height: 600px;
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    place-content: center;
+    padding: 15px;
+
+    .item1 {
+        width: 90%;
+        margin: auto;
+    }
+
+    .item2 {
+        max-width: 300px;
+        margin: auto;
+    }
+}
+
+.vestimenta {
+    background: url(imagenes/fondo1.jpg);
+    min-height: 600px;
+    background-size: cover;
+    background-position: center;
+    display: grid;
+    place-content: center;
+    padding: 15px;
+
+    img {
+        max-width: 200px;
+        margin: auto;
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        font-size: 40px;
+        margin: 0;
+        color: #c27347;
+        padding: 0;
+        line-height: 1;
+    }
+
+    h4 {
+        font-family: "MonteCarlo", cursive;
+        font-size: 28px;
+        color: #c27347;
+        margin: 0;
+        font-weight: 600;
+        max-width: 280px;
+        margin: auto;
+        line-height: 1.1;
+
+    }
+
+    ul {
+        display: flex;
+        gap: 20px;
+        list-style: none;
+
+        li {
+            width: 80px;
+            height: 80px;
+            border: #ffffff 4px solid;
+            border-radius: 50%;
+            box-shadow: 2px 2px 12px 3px rgba(0, 0, 0, 0.357);
+            display: grid;
+            place-content: center;
+            font-family: "MonteCarlo", cursive;
+            font-size: 30px;
+            font-weight: bold;
+        }
+
+        .blanco {
+            background-color: #ffffff;
+            color: #c27347;
+        }
+
+        .beige {
+            background-color: #f5e1c8;
+            color: #c27347;
+        }
+
+        .agradecimiento {
+            background-color: #f5e1c8;
+            color: #c27347;
+        }
     }
 }
