--- a/estilos.scss
+++ b/estilos.scss
@@ -611,6 +611,19 @@ video {
         max-width: 130px;
     }
 
+    @media (max-width: 600px) {
+
+        .presentacion img,
+        .saludo img,
+        .agradecimiento img,
+        .padres img,
+        .presentacion2 img,
+        .presentacion3 img,
+        .vestimenta img {
+            max-width: 180px;
+        }
+    }
+
     .cuadro {
         max-width: 100vw;
         padding: 8px;
